<resources>
    <string name="app_name">WagePay</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>

    <string name="heading1">Record Wage Details</string>
    <string name="heading2">Automatic Wage Calculation</string>
    <string name="heading3">Payment Reports</string>
    <string name="heading4">Wage Ledger on your Phone</string>

    <string name="des1">Maintain daily wage journals of your employees in a systematic way.</string>
    <string name="des2">Wage Pay provides realtime and error free calculation of wage.</string>
    <string name="des3">Provides clear and concise analytics of your payments.</string>
    <string name="des4">Track your wage records on the go anywhere and anytime.</string>

    <string name="loginText">Login With Phone</string>
    <string name="loginHInt">9804904964</string>
    <string name="otpBtn">Get OTP</string>
    <string name="otpVerify">OTP Verification</string>
    <string name="otpHint">Please enter OTP sent to you.</string>
    <string name="noOtp">Didn\'t received OTP?</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="submitBtn">Submit</string>

    <string name="advanceDetails">Advance Paid Details</string>
    <string name="dueDetails">Due Payment Details</string>
    <string name="paymentHistory">Payment History</string>

    <!--    sudip-->
    <string name="user_name">Sudip Baral</string>
    <string name="home">Home</string>
    <string name="profile_pic">Profile picture</string>
    <string name="attendance">Attendance</string>
    <string name="summary">Summary</string>
    <string name="helpAndSupport">HELP AND SUPPORT</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="contactus">Contact us</string>
    <string name="share">Share this app</string>
    <string name="logout">Logout</string>
    <string name="filter">Category filter icon</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    For form-->

    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="addNewWorker">Add New Worker</string>
    <string name="enterWorkerName">Enter Worker Name</string>
    <string name="address">Address</string>
    <string name="enterWorkerAddress">Enter Worker Address</string>
    <string name="business">Business</string>
    <string name="number">Number</string>
    <string name="enterWorkerPhoneNumber">Enter Worker Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="wageRate">Wage Rate</string>
    <string name="enterWageRate">Enter Worker Wage Rate (Rs/Day)</string>

    <string name="enterYourName">Enter Your Full Name</string>
    <string name="enterYourAddress">Enter Your Address</string>
    <string name="enterYourBusiness">Enter Business Type</string>
    <string name="saveChange">Save Changes</string>
    <string name="day">Wednesday</string>
    <string name="date">2023/07/13</string>

</resources>