<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/titleImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/worker"
            />
        <TextView
            android:id="@+id/texttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:fontFamily="@font/popinsbold"
            android:layout_marginTop="@dimen/_30sdp"
            />
        <TextView
            android:id="@+id/textdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/des1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/popins_regular"
            />

    </LinearLayout>
