<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_70sdp"
                    android:background="@drawable/underline_shape"
                     />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-75dp"
                    android:src="@drawable/hazard"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_3sdp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_camera"
                    android:layout_marginTop="-50dp"
                    android:layout_marginStart="@dimen/_30sdp"
                    app:civ_circle_background_color="@color/yellow"
                    app:civ_border_color="@color/yellow"
                    app:civ_border_width="5dp"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="@dimen/_20ssp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_marginVertical="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/_15ssp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:inputType="textCapWords"
                android:autofillHints="name"
                android:background="@drawable/custom_form_design"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_10sdp"
                android:hint="@string/enterYourName"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/_15ssp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:inputType="text"
                android:autofillHints="postalAddress"
                android:background="@drawable/custom_form_design"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_10sdp"
                android:hint="@string/enterYourAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="@dimen/_15ssp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:autofillHints="phone"
                android:background="@drawable/custom_form_design"
                android:textSize="@dimen/_13ssp"
                android:padding="@dimen/_10sdp"
                android:hint="@string/enterYourNumber"
                android:inputType="phone"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_30sdp"
                android:text="@string/saveChange"
                android:paddingVertical="@dimen/_5sdp"
                android:textSize="@dimen/_13ssp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
