<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:background="@color/transparent"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        />
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/skipButton"
        android:layout_above="@+id/indicator_layout"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/round_btn"
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_alignParentBottom="true"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/round_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10sp"
        />

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/backbtn"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10sp">

    </LinearLayout>


</RelativeLayout>