<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AttendanceFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/green"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/white"
            android:layout_marginTop="-60dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_8sdp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attendance"
                        android:fontFamily="@font/popinsbold"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_20ssp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day"
                            android:id="@+id/day"
                            android:textColor="@color/black"
                            android:layout_marginEnd="@dimen/_3sdp"
                            android:fontFamily="@font/popins_regular"
                            android:textSize="@dimen/_13ssp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:id="@+id/date"
                            android:textColor="@color/black"
                            android:fontFamily="@font/popins_regular"
                            android:textSize="@dimen/_13ssp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/calender"
                        android:src="@drawable/icon_calender"
                        app:civ_circle_background_color="@color/green"
                        app:civ_border_color="@color/green"
                        app:civ_border_width="@dimen/_6sdp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear">
            <!-- Your RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/attendance_recyclerView" />



        </RelativeLayout>





    </RelativeLayout>



</FrameLayout>